# infotecs

./: CMakeLists.txt
client/: CMakeLists.txt  interruptible_thread.cpp  interruptible_thread.h  main.cpp  network_connection.cpp  network_connection.h  network_connection_client.cpp  network_connection_client.h  processor.cpp  processor.h  threadsafe_filework.cpp  threadsafe_filework.h
client/joining_thread/: CMakeLists.txt  joining_thread.cpp  joining_thread.h
client/main/: CMakeLists.txt  main.cpp
client/threadsafe_filework/: CMakeLists.txt  threadsafe_filework.cpp  threadsafe_filework.h
server/: CMakeLists.txt  main.cpp  network_connection_server.cpp  network_connection_server.h  server_processor.cpp  server_processor.h
